<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">
    <!--group one-->
    <!--content one_one -->
    <RelativeLayout
        android:id="@+id/Rl_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/txt_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/settings_content_style"
            android:text="@string/txt_general"/>
        <RelativeLayout
            android:id="@+id/rl_globle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/txt_general">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:src="@drawable/control"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/txt_Global"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:text="@string/txt_connection"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
    <!--content two_one-->
    <RelativeLayout
            android:id="@+id/rl_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/Rl_general">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:src="@drawable/man_user"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/txt_User"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:text="@string/txt_mode"/>
            </LinearLayout>
    </RelativeLayout>

    <!--group two-->
    <!--content one_two-->
    <RelativeLayout
        android:id="@+id/Rl_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_user">
        <TextView
            android:id="@+id/txt_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/settings_content_style"
            android:text="@string/txt_other"/>
        <RelativeLayout
            android:id="@+id/rl_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/txt_other">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:src="@drawable/compass_system"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/txt_system"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:text="@string/txt_Auto"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
    <!--content two_two-->
    <RelativeLayout
        android:id="@+id/rl_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/Rl_other">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/contacts"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/txt_Contact"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"/>
    </RelativeLayout>
    <!--content three_two-->
    <RelativeLayout
        android:id="@+id/rl_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/rl_contact">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/blue_question_mark_icon"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_help"/>
    </RelativeLayout>
    <!--content three_two-->

    <RelativeLayout
        android:id="@+id/rl_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/rl_help">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/logout"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/txt_logout"/>
    </RelativeLayout>


</RelativeLayout>